--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <section id="portfolio">
             <div class="container-fluid p-0">
                 <div class="row no-gutters">
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 col-xl-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                             <div class="portfolio-box-caption">
@@ -105,7 +105,7 @@
                             </div></a
                         >
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 col-xl-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
                             <div class="portfolio-box-caption">
@@ -114,7 +114,7 @@
                             </div></a
                         >
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 col-xl-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
                             <div class="portfolio-box-caption">
@@ -123,7 +123,7 @@
                             </div></a
                         >
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 col-xl-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
                             <div class="portfolio-box-caption">
