--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">About Me!</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">I am a Software Developer who has just recently completed an intensive Software Engineering Immersive with a experience in the financial, medical, and restaurant industries.  My highly varied background and experience allows me to understand and adapt to many different situations efficiently.  I am a highly driven individual who thrives in cooperative as well as isolated environments who will always put in 200% to accomplish whatever tasks are expected and needed of me.  (to be continued...)</p>
+                        <p class="text-white-50 mb-4">I am a Software Developer who has just recently completed an intensive Software Engineering Immersive with experience in the financial, medical, and restaurant industries.  My highly varied background and experience allows me to understand and adapt to many different situations efficiently.  I am a highly driven individual who thrives in cooperative as well as isolated environments who will always put in 200% to accomplish whatever tasks are expected and needed of me.</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
                     </div>
                 </div>
