Change projects pictures and contact information
Change project pictures
Change path for resume download

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="row no-gutters">
                     <div class="col-lg-6 col-sm-6 col-xl-6">
                         <a class="portfolio-box" href="https://kurotsubasa.github.io/fantasy-foragers-client/#/"
-                            ><img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
+                            ><img class="img-fluid" src="assets/img/projects/fantasy-foragers.png" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Project</div>
                                 <div class="project-name">Fantasy Foragers</div>
@@ -159,7 +159,7 @@
                     </div>
                     <div class="col-lg-6 col-sm-6 col-xl-6">
                         <a class="portfolio-box" href="https://sei-nope.github.io/inStock-client/"
-                            ><img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
+                            ><img class="img-fluid" src="assets/img/projects/inStock.png" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Project</div>
                                 <div class="project-name">inStock Co.</div>
@@ -168,7 +168,7 @@
                     </div>
                     <div class="col-lg-6 col-sm-6 col-xl-6">
                         <a class="portfolio-box" href="https://kurotsubasa.github.io/writings-client/"
-                            ><img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
+                            ><img class="img-fluid" src="assets/img/projects/World-of-Wishes.png" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Project</div>
                                 <div class="project-name">World of Wishes</div>
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col-lg-6 col-sm-6 col-xl-6">
                         <a class="portfolio-box" href="https://kurotsubasa.github.io/tictactoe-client/"
-                            ><img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
+                            ><img class="img-fluid" src="assets/img/projects/tictactoe.png" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Project</div>
                                 <div class="project-name">TicTacToe</div>
@@ -192,7 +192,7 @@
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
                 <h2 class="mb-4">Resumes!</h2>
-                <a class="btn btn-light btn-xl" href="assets/img/portfolio/Resume.pdf" download>Download Now!</a>
+                <a class="btn btn-light btn-xl" href="assets/img/Resume.pdf" download>Download Now!</a>
             </div>
         </section>
         <!-- Contact section-->
