Added introduction to projects
Added introduction to projects hover boxes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>Hua Yang</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -152,8 +152,8 @@
                         <a class="portfolio-box" href="https://kurotsubasa.github.io/fantasy-foragers-client/#/"
                             ><img class="img-fluid project" src="assets/img/portfolio/projects/fantasy-foragers.png" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Project</div>
                                 <div class="project-name">Fantasy Foragers</div>
+                                <div>Fantasy Foragers is a text based online multiplayer role playing game where you can fight other users' creations.  Take control of a character created by other users or even create your own, equip your forager with a skill, then pit yourself against the computer or even duel your friends!</div>
                             </div></a
                         >
                     </div>
@@ -161,8 +161,8 @@
                         <a class="portfolio-box" href="https://sei-nope.github.io/inStock-client/"
                             ><img class="img-fluid project" src="assets/img/portfolio/projects/inStock.png" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Project</div>
                                 <div class="project-name">inStock Co.</div>
+                                <div>inStock Co. is an inventory management system that you can use to keep track of items for your business or even your daily life.</div>
                             </div></a
                         >
                     </div>
@@ -170,8 +170,8 @@
                         <a class="portfolio-box" href="https://kurotsubasa.github.io/writings-client/"
                             ><img class="img-fluid project" src="assets/img/portfolio/projects/World-of-Wishes.png" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Project</div>
                                 <div class="project-name">World of Wishes</div>
+                                <div>World of Wishes is a literature collection record keeper where you can keep track of all of the literature you have read.  From books to magazines to scholarly papers, keep track of everything that you have read and maybe even pick up a few books that your peers have read.</div>
                             </div></a
                         >
                     </div>
@@ -179,8 +179,8 @@
                         <a class="portfolio-box" href="https://kurotsubasa.github.io/tictactoe-client/"
                             ><img class="img-fluid project" src="assets/img/portfolio/projects/tictactoe.png" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Project</div>
                                 <div class="project-name">TicTacToe</div>
+                                <div>TicTacToe is a recreation of the classic pen and paper game developed through the use of an algorithmic formula where you and a friend can play on the same device.</div>
                             </div></a
                         >
                     </div>
