--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
         </section>
         <!-- Portfolio section-->
         <section id="portfolio">
+          <h2 class="text-center mt-0">Projects</h2>
             <div class="container-fluid p-0">
                 <div class="row no-gutters">
                     <div class="col-lg-6 col-sm-6 col-xl-6">
