--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fab fa-linkedin-in fa-3x mb-3 text-muted"></i>
-                        <a href="https://www.linkedin.com/in/yang-hua/">LinkedIn</a>
+                        <a class="d-block" href="https://www.linkedin.com/in/yang-hua/">LinkedIn</a>
                     </div>
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fab fa-github fa-3x mb-3 text-muted"></i>
-                        <a href="https://github.com/kurotsubasa">Github</a>
+                        <a class="d-block" href="https://github.com/kurotsubasa">Github</a>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i
