--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <h2 class="text-white mt-0">About Me!</h2>
                         <hr class="divider light my-4" />
                         <p class="text-white-50 mb-4">I am a Software Developer who has just recently completed an intensive Software Engineering Immersive with experience in the financial, medical, and restaurant industries.  My highly varied background and experience allows me to understand and adapt to many different situations efficiently.  I am a highly driven individual who thrives in cooperative as well as isolated environments who will always put in 200% to accomplish whatever tasks are expected and needed of me.</p>
-                        <a class="btn btn-light btn-xl" href="./assets/img/Resume.pdf">Take a look at my resume!</a>
+                        <a class="btn btn-light btn-xl" href="./assets/img/Hua-Yang-Resume.pdf">Take a look at my resume!</a>
                     </div>
                 </div>
             </div>
@@ -198,7 +198,7 @@
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
                 <h2 class="mb-4">Resumes!</h2>
-                <a class="btn btn-light btn-xl" href="assets/img/Resume.pdf" download>Download Now!</a>
+                <a class="btn btn-light btn-xl" href="assets/img/Hua-Yang-Resume.pdf" download>Download Now!</a>
             </div>
         </section>
         <!-- Contact section-->
