Change ruby on rails logo

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <img class='icon' src='https://i.ya-webdesign.com/images/ruby-transparent-rail-logo.png'>
+                            <img class='icon' src='https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Ruby_on_Rails_logo.svg/1200px-Ruby_on_Rails_logo.svg.png'>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
