--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
                         <h1 class="text-uppercase text-white font-weight-bold">Hua Yang</h1>
-                        <img class='photo' src='./assets/img/portfolio/photo.png'> 
+                        <img class='photo' src='./assets/img/photo.png'> 
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
