Changed about me and added goal in summary
Modified about me
Added goal in summary

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Highly motivated Software Developer who is hungry to improve with a strong understanding of data flow. Takes pride in a systematic and logical approach to most everything in his daily life.</p>
+                        <p class="text-white-75 font-weight-light mb-5">Highly motivated Software Developer who is hungry to improve with a strong understanding of data flow. Takes pride in a systematic and logical approach to most everything in his daily life.  Seeking entry level Full Stack Engineer position in Boston.</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">About Me!</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">I am a Software Developer who has just recently completed an intensive Software Engineering Immersive with experience in the financial, medical, and restaurant industries.  My highly varied background and experience allows me to understand and adapt to many different situations efficiently.  I am a highly driven individual who thrives in cooperative as well as isolated environments who will always put in 200% to accomplish whatever tasks are expected and needed of me.</p>
+                        <p class="text-white-50 mb-4">Software engineer with a proven ability to deliver versatile, effective products in collaborative and independent settings under strict and often tight time constraints. Managed and maintained contracts and agreements with multiple third parties to control costs by communicating with outside vendors to acquire agreements and important documents. Always seeking personal growth, I expanded my coding acumen through a 500+ hour coding Bootcamp focused on Javascript, Ruby, React, and MongoDB.  am now eager to tackle more complex challenges and continue to find ways to build full stack applications to improve the quality of life for the world at large.</p>
                         <a class="btn btn-light btn-xl" href="./assets/img/Hua-Yang-Resume.pdf">Take a look at my resume!</a>
                     </div>
                 </div>
